--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>fezgugel plataforma</title>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<link rel="stylesheet" href="style.css" />
+
 </head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-WND48PKLWT"></script>
 <script>
@@ -28,57 +31,74 @@
 </div>
 <div style="align-content: center;">
 <table width="100%">
-<tr>
-<td width="100%" align="center"><img width="40%" height="40%" src="fezgugel.png" /></td>
-</tr>
+
 </table>
 <table>
 <tr>
-  <td style="width: 40%;"><h1></h1></td>
-  <td><h1></h1></td>
-<td><h1></h1></td>
-</tr>
-<tr>
-<td width="100%" align="center">
-<img src="anima.gif" alt="Funny image"> 
-</td>
+  <td style="width: 40%;"><h1>Ingeniero Docente Responsable Cristian Vargas</h1></td>
+  <td><img width="50%" height="50%" src="this2.JPG"/></td>
+  <td><img width="50%" height="50%" src="this3.JPG"/></td>
 </tr>
 </table>
 
 <table width="100%">
   <tr>
 <td width="20%" align="center"></td>
-<td width="20%" align="center"><h1>Plataforma Educativa de Cursos Online "Fezgugel"</h1></td>
+<td width="20%" align="center"><h1>Instituto Fezgugel aprender es tu poder</h1></td>
 <td width="20%" align="center"></td>
 </tr>
 </table>
 <table width="100%">
 <tr>
-<td align="center"><img width="100%" height="50%" src="mision.JPG"/></td>
-<td align="center"><img width="100%" height="50%" src="vision.JPG" /></td>
-<td align="center"><img width="100%" height="50%" src="valores.JPG"/></td>
+<td data-aos="zoom-in-right" align="center"><img width="100%" height="50%" src="mision.JPG"/></td>
+<td data-aos="zoom-out-down" align="center"><img width="100%" height="50%" src="vision.JPG" /></td>
+<td data-aos="zoom-in-left"" align="center"><img width="100%" height="50%" src="valores.JPG"/></td>
 </tr>
 </table>
 <table width="100%">
+  <tr>
+    <td data-aos="fade-right"
+    data-aos-offset="300"
+    data-aos-easing="ease-in-sine" width="100%" align="center"><img width="85%" height="85%" src="esfm48.JPG"/></td>
+    </tr>
+    <tr>
+      <td data-aos="fade-right"
+      data-aos-offset="300"
+      data-aos-easing="ease-in-sine" width="100%" align="center"><img width="85%" height="85%" src="algebra48.JPG"/></td>
+      </tr>
+      <tr>
+        <td data-aos="fade-right"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine" width="100%" align="center"><img width="85%" height="85%" src="calculo48.JPG"/></td>
+        </tr>
 <tr>
-<td width="100%" align="center"><img width="85%" height="85%" src="umsa.JPG"/></td>
+<td data-aos="fade-right"
+data-aos-offset="300"
+data-aos-easing="ease-in-sine" width="100%" align="center"><img width="85%" height="85%" src="esfmmaterial.JPG"/></td>
 </tr>
 <tr>
-<td width="100%" align="center"><img width="85%" height="85%" src="curso algebra.JPG" /></td>
+<td data-aos="fade-right"
+data-aos-offset="300"
+data-aos-easing="ease-in-sine" width="100%" align="center"><img width="85%" height="85%" src="anapol48.JPG" /></td>
 </tr>
 <tr>
-<td width="100%" align="center"><img width="85%" height="85%" src="colmilav.JPG"/></td>
+<td data-aos="fade-right"
+data-aos-offset="300"
+data-aos-easing="ease-in-sine" width="100%" align="center"><img width="85%" height="85%" src="colmil48.JPG"/></td>
 </tr>
 <tr>
-<td width="100%" align="center"><img width="85%" height="85%" src="incos.JPG" /></td>
+<td data-aos="fade-right"
+data-aos-offset="300"
+data-aos-easing="ease-in-sine" width="100%" align="center"><img width="85%" height="85%" src="incos48.JPG" /></td>
 </tr>
-<tr>
-<td width="100%" align="center"><img width="85%" height="85%" src="curso calculo.JPG"/></td>
-</tr>
-<tr>
 <td width="100%" align="center"><img width="250" height="285" src="wasapcurso.jpg"/></td>
 </tr>
+
 </table>
 </div>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
